# ChangeLog for net-irc/rbot
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/rbot/ChangeLog,v 1.15 2006/07/31 23:16:31 flameeyes Exp $

*rbot-0.9.10_pre20060801 (31 Jul 2006)

  31 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> metadata.xml,
  +rbot-0.9.10_pre20060801.ebuild:
  Snapshot version from current stable branch.

  27 May 2006; Diego Pettenò <flameeyes@gentoo.org> rbot-0.9.9.ebuild:
  Add ~x86-fbsd keyword.

*rbot-0.9.9 (02 Jan 2006)

  02 Jan 2006; Sven Wegener <swegener@gentoo.org> +rbot-0.9.9.ebuild:
  Version bump, bug #117402.

  06 Oct 2005; Caleb Tennis <caleb@gentoo.org> rbot-0.9.7.ebuild:
  Change dep to ruby 1.8

  17 Sep 2005; Sven Wegener <swegener@gentoo.org> rbot-0.9.7.ebuild:
  Only install html API documentation with USE=doc

  07 Jul 2005; Sven Wegener <swegener@gentoo.org> -rbot-0.9.6.ebuild:
  Removed old ebuild.

  03 May 2005; Sven Wegener <swegener@gentoo.org> rbot-0.9.6.ebuild,
  rbot-0.9.7.ebuild:
  Adjusted dependencies to not pull in dev-ruby/rexml. Instead we depend (by
  default) on >=virtual/ruby-1.8 that already includes rexml, but the
  combination of =virtual/ruby-1.6* with dev-ruby/shim-ruby18 or
  dev-ruby/rexml is also fine. Closes bug #89164.

  22 Apr 2005; Sven Wegener <swegener@gentoo.org> rbot-0.9.7.ebuild:
  Marked stable on x86.

  18 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> rbot-0.9.7.ebuild:
  added ~amd64 to KEYWORDS, fixes #89165

  10 Oct 2004; Jason Wever <weeve@gentoo.org> rbot-0.9.7.ebuild:
  Added ~sparc keyword.

*rbot-0.9.7 (17 Jul 2004)

  17 Jul 2004; Sven Wegener <swegener@gentoo.org> rbot-0.9.6.ebuild,
  +rbot-0.9.7.ebuild:
  Version bump. Marked 0.9.6 stable on x86.

  29 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> rbot-0.9.6.ebuild:
  Masked rbot-0.9.6.ebuild testing for ppc

  12 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> rbot-0.9.6.ebuild:
  virtual/ruby fix
