@@ -1,0 +1,3 @@
+MD5 886cc08498daa67ef275ca64d0a4ca70 rbot-0.9.10.tgz 385108
+RMD160 34b4240b1117c3f4a9e6a5c34f6e8435b0dfe56d rbot-0.9.10.tgz 385108
+SHA256 4429b2338fe008b763c811beffb0c23bdd457bb831aad1ca9df3272ae9ba909a rbot-0.9.10.tgz 385108
