@@ -1,0 +1,36 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/rbot/Attic/rbot-0.9.10.ebuild,v 1.1 2006/09/15 10:14:17 flameeyes Exp $
+
+inherit ruby
+
+DESCRIPTION="rbot is a ruby IRC bot"
+HOMEPAGE="http://www.linuxbrit.co.uk/rbot/"
+
+if [[ ${PV} != *_pre* ]]; then
+	SRC_URI="http://www.linuxbrit.co.uk/downloads/${P}.tgz"
+else
+	SRC_URI="mirror://gentoo/${P}.tgz"
+	S="${WORKDIR}/${PN}-${PV%%_*}"
+fi
+
+LICENSE="as-is"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~x86-fbsd"
+IUSE="spell"
+
+RDEPEND=">=virtual/ruby-1.8
+	dev-ruby/ruby-bdb
+	spell? ( app-text/ispell )"
+DEPEND="${RDEPEND}"
+
+src_install() {
+	ruby_src_install
+	sed -i -e "s:${D}:/:" "${D}"/usr/lib/ruby/site_ruby/*/rbot/pkgconfig.rb
+}
+
+pkg_postinst() {
+	einfo
+	einfo "Default configuration file location has changed from /etc/rbot to ~/.rbot"
+	einfo
+}
